Bug 543240: [12] Second Case Constant in a switch label is reported as missing
Change-Id: Ifd3ec58cae737f9a3c47393887c6727e1cbad079
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>